@@ -1,3 +1,10 @@
+2010-09-21  Yves Blusseau  <blusseau@zetam.org>
+
+	* util/grub-editenv.c: Update strings to avoid warnings when generating
+	grub.pot file.
+	* util/grub-setup.c: Likewise.
+	
+
 2010-09-21  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* configure.ac: Change version to 1.99~beta0.
